# shipwrecked-rs

./: .gitignore  Cargo.toml  README.md  rs.tiled-session
assets/: atlas.json  strings.json
assets/sprites/: D0  README.md
docs/: original_behavior.md
sprite_audit/: mapping_audit.csv  mapping_audit.md
src/: actions.rs  atlas.rs  behavior.rs  daynight.rs  decor.rs  display.rs  extract_views.py  input.rs  inventory.rs  main.rs  main.rs.reconstructed  npc.rs  objects.rs  player.rs  recipes.rs  restore_from_transcript.py  save.rs  world.rs
tools/: decode_d0.py  decoded_objects.txt  expand_maps.py  migrate_maps.py  reparse_decor.py
