[package]
name = "shipwrecked"
version = "0.1.0"
edition = "2021"
description = "Rust/Macroquad top-down port of the J2ME game Shipwrecked"

[dependencies]
macroquad = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fastrand = "2"

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1
